force-app/main/default/objects/Goal__c/fields/Crop__c.field-meta.xml
<CustomField>
    <fullName>Crop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Safra</label>
    <referenceTo>Crop__c</referenceTo>
    <relationshipLabel>Metas</relationshipLabel>
    <relationshipName>Metas</relationshipName>
    <type>Lookup</type>
</CustomField>