force-app/main/default/objects/Goal__c/fields/ExternalIdUser__c.field-meta.xml
<CustomField>
    <fullName>ExternalIdUser__c</fullName>
    <formula>User__r.ExternalId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código do Vendedor</label>
    <type>Text</type>
</CustomField>