force-app/main/default/objects/Goal__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Familia</label>
    <referenceTo>Family__c</referenceTo>
    <relationshipName>Familias</relationshipName>
    <type>Lookup</type>
</CustomField>