force-app/main/default/objects/Goal__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Meta</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>