force-app/main/default/objects/Goal__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <label>Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>FERTILIZANTES</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>DEFENSIVOS</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>SEMENTES DE SOJA</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>SEMENTES DE MILHO</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>SEMENTES DIVERSAS</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>ESPECIALIDADES</label>
            </value>
            <value>
                <fullName>XX</fullName>
                <default>true</default>
                <label>INVALIDO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>