force-app/main/default/objects/Goal__c/fields/PercentGoal__c.field-meta.xml
<CustomField>
    <fullName>PercentGoal__c</fullName>
    <formula>RealizedBilled__c / IF(Goal__c = 0, 1, Goal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentual Meta Atingida</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>