force-app/main/default/objects/Goal__c/fields/ReachedGoal__c.field-meta.xml
<CustomField>
    <fullName>ReachedGoal__c</fullName>
    <formula>RealizedBilled__c &gt; Goal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meta Atingida?</label>
    <type>Checkbox</type>
</CustomField>