force-app/main/default/objects/Goal__c/fields/RealizedBilled__c.field-meta.xml
<CustomField>
    <fullName>RealizedBilled__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Valor Atingido</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>