force-app/main/default/objects/Goal__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Região</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUL</fullName>
            </value>
            <value>
                <fullName>NORTE</fullName>
            </value>
            <value>
                <fullName>LESTE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>