force-app/main/default/objects/Goal__c/recordTypes/Billing.recordType-meta.xml
<RecordType>
    <fullName>Billing</fullName>
    <active>true</active>
    <label>Faturamento</label>
</RecordType>