force-app/main/default/objects/Goal__c/recordTypes/Inadimplencia.recordType-meta.xml
<RecordType>
    <fullName>Inadimplencia</fullName>
    <active>true</active>
    <label>Inadimplência</label>
</RecordType>