force-app/main/default/objects/Goal__c/recordTypes/Margin.recordType-meta.xml
<RecordType>
    <fullName>Margin</fullName>
    <active>true</active>
    <label>Margem</label>
</RecordType>