force-app/main/default/objects/Goal__c/recordTypes/Sales.recordType-meta.xml
<RecordType>
    <fullName>Sales</fullName>
    <active>true</active>
    <label>Vendas</label>
</RecordType>