force-app/main/default/objects/Goal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Crop__c</columns>
    <columns>Family__c</columns>
    <columns>Goal__c</columns>
    <columns>RealizedBilled__c</columns>
    <columns>PercentGoal__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>